[gd_scene load_steps=3 format=3 uid="uid://dfugg8ntgoc7u"]

[ext_resource type="PackedScene" uid="uid://tletdquhrnvm" path="res://src/map/Map.tscn" id="1_qxfn3"]
[ext_resource type="Script" path="res://src/battle/BattleMap.gd" id="2_q5q2p"]

[node name="BattleMap" instance=ExtResource("1_qxfn3")]
script = ExtResource("2_q5q2p")
grid_size = null
grid_width = null
grid_height = null

[node name="LocationData" type="Node2D" parent="." index="2"]
show_behind_parent = true

[node name="MobMarkers" type="Node2D" parent="." index="3"]

[node name="PartySpawn" type="ColorRect" parent="." index="4"]
modulate = Color(1, 1, 1, 0.431373)
offset_left = 208.0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 192.0
